--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+regex = ">= 1.11.1, < 2.0.0"
 eframe = ">= 0.31.0, < 1.0.0"
 egui_extras = ">= 0.31.0, < 1.0.0"
