--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = ">= 0.4.39, < 1.0.0"
 regex = ">= 1.11.1, < 2.0.0"
 eframe = ">= 0.31.0, < 1.0.0"
 egui_extras = ">= 0.31.0, < 1.0.0"
